--- a/index.html
+++ b/index.html
@@ -43,30 +43,87 @@
                     <h3>Appointments Cancelled</h3>
                     <h1>200</h1>
                 </div>
-                <button class = "navigateStats">R</button>
                 <button class = "navigateStats">L</button>
+                <button class = "navigateStats">R</button>
             </section>
 
             <div id = "dashboardBottomRow">
                 <section id = "upcomingAppointments">
                     <h2>Upcoming Appointments</h2>
-                    <ul>
-                        <li>Name</li>
-                        <li>Date</li>
-                        <li>Time</li>
-                    </ul>
-                    <div class = "upcomingAppointment">
-                        <p>Rony Brawa</p>
-                        <p>05/16/22</p>
-                        <p>06:00 PM</p>
-                        <p>X</p>
-                    </div>
-                    <div class = "upcomingAppointment">
-                        <p>Rony Brawa</p>
-                        <p>05/16/22</p>
-                        <p>06:00 PM</p>
-                        <p>X</p>
-                    </div>
+                    <table>
+                        <tr class = "dataField">
+                            <td>Name</td>
+                            <td>Date</td>
+                            <td>Time</td>
+                            <td>Status</td>
+                        </tr>
+                        <tr>
+                            <td>Rony Brawa</td>
+                            <td>05/16/22</td>
+                            <td>06:00 PM</td>
+                            <td>X</td>
+                        </tr>
+                        <tr>
+                            <td>Rony Brawa</td>
+                            <td>05/16/22</td>
+                            <td>06:00 PM</td>
+                            <td>X</td>
+                        </tr>
+                        <tr>
+                            <td>Rony Brawa</td>
+                            <td>05/16/22</td>
+                            <td>06:00 PM</td>
+                            <td>X</td>
+                        </tr>
+                        <tr>
+                            <td>Rony Brawa</td>
+                            <td>05/16/22</td>
+                            <td>06:00 PM</td>
+                            <td>X</td>
+                        </tr>
+                        <tr>
+                            <td>Rony Brawa</td>
+                            <td>05/16/22</td>
+                            <td>06:00 PM</td>
+                            <td>X</td>
+                        </tr>
+                        <tr>
+                            <td>Rony Brawa</td>
+                            <td>05/16/22</td>
+                            <td>06:00 PM</td>
+                            <td>X</td>
+                        </tr>
+                        <tr>
+                            <td>Rony Brawa</td>
+                            <td>05/16/22</td>
+                            <td>06:00 PM</td>
+                            <td>X</td>
+                        </tr>
+                        <tr>
+                            <td>Rony Brawa</td>
+                            <td>05/16/22</td>
+                            <td>06:00 PM</td>
+                            <td>X</td>
+                        </tr>
+                        <tr>
+                            <td>Rony Brawa</td>
+                            <td>05/16/22</td>
+                            <td>06:00 PM</td>
+                            <td>X</td>
+                        </tr>
+                        <tr>
+                            <td>Rony Brawa</td>
+                            <td>05/16/22</td>
+                            <td>06:00 PM</td>
+                            <td>X</td>
+                        </tr>
+                        <tr>
+                            <td>Rony Brawa</td>
+                            <td>05/16/22</td>
+                            <td>06:00 PM</td>
+                            <td>X</td>
+                        </tr>
+                    </table>
                 </section>
 
                 <aside id = "reminderBox">
