reminders box css

--- a/index.html
+++ b/index.html
@@ -61,77 +61,81 @@
                             <td>Rony Brawa</td>
                             <td>05/16/22</td>
                             <td>06:00 PM</td>
-                            <td>X</td>
+                            <td>Confirmed</td>
                         </tr>
                         <tr>
                             <td>Rony Brawa</td>
                             <td>05/16/22</td>
                             <td>06:00 PM</td>
-                            <td>X</td>
+                            <td>Confirmed</td>
                         </tr>
                         <tr>
                             <td>Rony Brawa</td>
                             <td>05/16/22</td>
                             <td>06:00 PM</td>
-                            <td>X</td>
+                            <td>Confirmed</td>
                         </tr>
                         <tr>
                             <td>Rony Brawa</td>
                             <td>05/16/22</td>
                             <td>06:00 PM</td>
-                            <td>X</td>
+                            <td>Confirmed</td>
                         </tr>
                         <tr>
                             <td>Rony Brawa</td>
                             <td>05/16/22</td>
                             <td>06:00 PM</td>
-                            <td>X</td>
+                            <td>Confirmed</td>
                         </tr>
                         <tr>
                             <td>Rony Brawa</td>
                             <td>05/16/22</td>
                             <td>06:00 PM</td>
-                            <td>X</td>
+                            <td>Confirmed</td>
                         </tr>
                         <tr>
                             <td>Rony Brawa</td>
                             <td>05/16/22</td>
                             <td>06:00 PM</td>
-                            <td>X</td>
+                            <td>Confirmed</td>
                         </tr>
                         <tr>
                             <td>Rony Brawa</td>
                             <td>05/16/22</td>
                             <td>06:00 PM</td>
-                            <td>X</td>
+                            <td>Confirmed</td>
                         </tr>
                         <tr>
                             <td>Rony Brawa</td>
                             <td>05/16/22</td>
                             <td>06:00 PM</td>
-                            <td>X</td>
+                            <td>Confirmed</td>
                         </tr>
                         <tr>
                             <td>Rony Brawa</td>
                             <td>05/16/22</td>
                             <td>06:00 PM</td>
-                            <td>X</td>
+                            <td>Confirmed</td>
                         </tr>
                         <tr>
                             <td>Rony Brawa</td>
                             <td>05/16/22</td>
                             <td>06:00 PM</td>
-                            <td>X</td>
+                            <td>Confirmed</td>
                         </tr>
                     </table>
                 </section>
 
                 <aside id = "reminderBox">
                     <h2>Reminders</h2>
-                    <ul>
-                        <li>Buy medicine</li>
-                        <li>Buy more medicine</li>
-                    </ul>
+                    <div class = 'reminder'>
+                        <label>adipiscing leit</label>
+                        <input type="checkbox">
+                    </div>
+                    <div class = 'reminder'>
+                        <label>adipiscing leit</label>
+                        <input type="checkbox">
+                    </div>
                 </aside>
         </div>
         </div>
