more reminderBox css

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         Sed et convallis urna. Morbi vestibulum velit mauris, nec mattis ipsum aliquam ut.</p>
                 </div>
                 <div class = "stats">
-                    <h3>Total Appointments</h3>
+                    <h3>Appointments</h3>
                     <h1>16,458</h1>
                 </div>
                 <div class = "stats">
@@ -128,6 +128,10 @@
 
                 <aside id = "reminderBox">
                     <h2>Reminders</h2>
+                    <form>
+                        <input type="text" placeholder="Add Reminder" name="reminderAdd">
+                        <button type="submit">Add</button>
+                    </form>
                     <div class = 'reminder'>
                         <label>adipiscing leit</label>
                         <input type="checkbox">
