--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                         <button type="submit">Q</button>
                     </form>
                    <div id = "navItems">
-                        <a href = "#">Home</a>
-                        <a href = "#">Patients</a>
-                        <a href = "#">Appointments</a>
+                        <a href = "index.html">Home</a>
+                        <a href = "patients.html">Patients</a>
+                        <a href = "appointments.html">Appointments</a>
                    </div>
                    <div id = "hamburgerMenuBtn">
                         <div></div>
