--- a/patient.html
+++ b/patient.html
@@ -26,19 +26,11 @@
                 </nav>
             </header>
 
-            <section id = "patientListBox">
-                <h2>Patient List</h2>
-                <table id = "patientList">
-                    <tr class = 'dataField'>
-                        <td>Name</td>
-                        <td>DOB </td>
-                        <td>Last Visit</td>
-                        <td>Number</td>
-                    </tr>
-                </table>
+            <section id = "patientBox">
+                
             </section>
 
         </div>
-        <script type = "module" src="handlePatients.js"></script>
+        <script type = "module" src="patientPage.js"></script>
     </body>
 </html>
