changed patient cards ,patient page and added profile icon fetch
overhauled the old table patient display and added a card list. also started using dicebear api to fetch profile icons

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         Proin pellentesque ultrices velit, quis mollis lectus fermentum vel. Morbi vehicula dapibus orci, sit amet 
                         commodo nunc eleifend nec. Phasellus eu posuere neque. Phasellus volutpat iaculis auctor. Aliquam malesuada 
                         luctus ullamcorper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; 
-                        Sed et convallis urna. Morbi vestibulum velit mauris, nec mattis ipsum aliquam ut.</p>
+                        Sed et convallis urna.</p>
                 </div>
                 <div class = "stats">
                     <h3>Appointments</h3>
@@ -49,7 +49,7 @@
 
             <div id = "dashboardBottomRow">
                 <section id = "upcomingAppointments">
-                    <h2>Upcoming Appointments</h2>
+                    <h3>Upcoming Appointments</h3>
                     <table>
                         <tr class = "dataField">
                             <td>Name</td>
@@ -127,7 +127,7 @@
                 </section>
 
                 <aside id = "reminderBox">
-                    <h2>Reminders</h2>
+                    <h3>Reminders</h3>
                     <form>
                         <input type="text" placeholder="Add Reminder" name="reminderAdd">
                         <button type="submit">Add</button>
