appointments display moved to appointment page,  CRUD appoointments

--- a/patient.html
+++ b/patient.html
@@ -16,10 +16,8 @@
                    <div id = "navItems">
                         <a href = "index.html">Home</a>
                         <a href = "patients.html">Patients</a>
-                        <a href = "appointments.html">Appointments</a>
                    </div>
                    <div id = "hamburgerMenuBtn">
-                        <div></div>
                         <div></div>
                         <div></div>
                    </div>
@@ -27,7 +25,50 @@
             </header>
 
             <section id = "patientBox">
-                
+                <div id = 'patientUpperSection'>
+                    <div id = 'patientInformation'>
+                        <div id = 'patientName'>
+                            <div id = 'patientIcon'></div>
+                            <h1 class = 'infoValue'></h1>
+                        </div>
+                        <div class = 'infoBlock'>
+                            <div class = 'info' style = 'color:#605bff;'>
+                                <p> DOB:</p>
+                                <p> Height:</p>
+                                <p> Weight:</p>
+                                <p> Sex:</p>
+                                <p> Number:</p>
+                                <p> Email:</p>
+                                <p> Address:</p>
+                            </div>
+                            <div class = 'info'>
+                                <p class = 'infoValue'></p>
+                                <p class = 'infoValue'></p>
+                                <p class = 'infoValue'></p>
+                                <p class = 'infoValue'></p>
+                                <p class = 'infoValue'></p>
+                                <p class = 'infoValue'></p>
+                                <p class = 'infoValue'></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class = "patientButtons">
+                        <button class = "editPatientBtn"> Edit </button>
+                        <button class = "deletePatientBtn"> Delete Patient </button>
+                    </div>
+                </div>
+                <div id = 'appointments'> 
+                    <h2>Appointments: </h2>
+                    <div id = 'setAppointmentBox'>
+                        <form id = 'setAppointmentForm'>
+                            <label for = 'appointmentDateIn'>Date: </label>
+                            <input type = 'date' id = 'appointmentDateIn'>
+                            <label for = 'timeIn'>DOB</label>
+                            <input type = 'time' id = 'timeIn'>
+                            <input type = 'submit' id = 'addAppointmentBtn' value = 'Set Appointment' />
+                        </form>
+                    </div>
+                </div>
             </section>
 
         </div>
