--- a/patients.html
+++ b/patients.html
@@ -31,58 +31,46 @@
                 </section>
                 <section id = 'regPatientBox'>
                     <h3>Register Patient</h3>
-                    <form id = 'regForm'>
-                        <div class = 'inputSection'>
+                    <div id = 'regForm'>
                             <div class = 'inputBox'>
-                                <label for = 'firstNameIn'>First Name</label>
-                                <input type = 'text' id = 'firstNameIn'>
-                            </div>
-                            <div class = 'inputBox'>
-                                <label for = 'lastNameIn'>Last Name</label>
-                                <input type = 'text' id = 'lastNameIn'>
+                                <label for = 'firstNameIn'>Name</label>
+                                <input type = 'text' id = 'nameIn'>
                             </div>
                             <div class = 'inputBox'>
                                 <label for = 'dateIn'>DOB</label>
                                 <input type = 'date' id = 'dateIn'>
                             </div>
-                        </div>
-                        <div class = 'inputSection'>
+                            <div class = 'inputBox'>
+                                <label for = 'weightIn'>Weight (kg)</label>
+                                <input type = 'number' id = 'weightIn'>
+                            </div>
+                            <div class = 'inputBox'>
+                                <label for = 'heightIn'>Height (cm)</label>
+                                <input type = 'number' id = 'heightIn'>
+                            </div>
                             <div class = 'inputBox'>
                                 <label for = 'phoneIn'>Phone Number</label>
                                 <input type = 'tel' id = 'phoneIn'>
                             </div>
                             <div class = 'inputBox'>
                                 <label for = 'emailIn'>Email</label>
-                                <input type = 'text' id = 'EmailIn'>
+                                <input type = 'text' id = 'emailIn'>
                             </div>
                             <div class = 'inputBox'>
                                 <label for = 'addressIn'>Address</label>
                                 <input type = 'text' id = 'addressIn'>
                             </div>
-                        </div>
-                        <div class = 'inputSection'>
-                            <div class = 'inputBox' style = 'gap:1rem;'>
-                                <label for = 'maleFemaleRadio'>Sex</label>
-                                <div id = 'maleFemaleRadio'>
-                                    <div>
-                                        Male
-                                        <input type = 'radio' id = 'maleIn' value = 'male'>
-                                    </div>
-                                    <div>
-                                        Female
-                                        <input type = 'radio' id = 'femaleIn' value = 'female'>
-                                    </div>
-                                    <div>
-                                        N/A
-                                        <input type = 'radio' id = 'NAIn' value = 'NA'>
-                                    </div>
-                                </div>
+                            <div class = 'inputBox'>
+                                <label for = 'sexIn'>Sex</label>
+                                <select id = 'sexIn'>
+                                    <option value = 'male'>Male</option>
+                                    <option value = 'female'>Female</option>
+                                </select>
                             </div>
                             <div class = 'inputBox'>
-                                <input type = 'submit' id = 'submitBtn' value = 'Add'>
+                                <input type = 'submit' value = 'Register' id = 'submitBtn'>
                             </div>
                         </div>
-                    </form>
                 </section>
             </div>
         </div>
