functional hamburgerMenu, randomized preset patient data,
for the most part the website is working as it should but the javascript and css need a good amount of code restructuring

--- a/patient.html
+++ b/patient.html
@@ -20,6 +20,10 @@
                         <div></div>
                    </div>
                 </nav>
+                <div id = 'hamburgerMenu'>
+                    <a href = "index.html">Home</a>
+                    <a href = "patients.html">Patients</a>
+                </div>
             </header>
 
             <section id = "patientBox">
