--- a/patients.html
+++ b/patients.html
@@ -20,6 +20,10 @@
                         <div></div>
                    </div>
                 </nav>
+                <div id = 'hamburgerMenu'>
+                    <a href = "index.html">Home</a>
+                    <a href = "patients.html">Patients</a>
+                </div>
             </header>
             <div id = 'patientsPage'>
                 <section id = "patientListBox">
@@ -48,7 +52,7 @@
                             </div>
                             <div class = 'inputBox'>
                                 <label for = 'phoneIn'>Phone Number</label>
-                                <input type = 'tel' id = 'phoneIn'>
+                                <input type = 'tel' id = 'phoneIn' maxlength="10">
                             </div>
                             <div class = 'inputBox'>
                                 <label for = 'emailIn'>Email</label>
